# gsbench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
src/gsbench/: __init__.py  cli.py  crossval.py  io.py  metrics.py  preprocess.py  report.py
src/gsbench/data/: example_geno.csv  example_pheno.csv
src/gsbench/models/: __init__.py  base.py  bayesian.py  ensemble.py  gblup.py  rkhs.py
src/gsbench/templates/: report.html
tests/: conftest.py  test_cli.py  test_crossval.py  test_io.py  test_metrics.py  test_models.py  test_preprocess.py  test_report.py
